--- a/integration-tests/kamelet/src/main/resources/application.properties
+++ b/integration-tests/kamelet/src/main/resources/application.properties
@@ -14,11 +14,8 @@
 ## See the License for the specific language governing permissions and
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
+camel.component.kamelet.location=classpath:kamelets,classpath:org/apache/camel/quarkus/custom/kamelet
 camel.kamelet.setBodyFromProperties.bodyValueFromProperty=Camel Quarkus Kamelet Property
 camel.main.routes-include-pattern=pipes/greeting-pipe.yaml
-
-quarkus.camel.kamelet.identifiers = injector,logger,greeting,greeting-from-property
-
-# this is needed to actually test that kamelet are preloaded at build time:
-camel.component.kamelet.location = file:/invalid
+quarkus.camel.kamelet.identifiers = injector,logger,greeting,greeting-from-property,custom
 quarkus.native.resources.includes=kamelets-runtime/*.xml,pipes/*.yaml
