--- a/integration-tests/jms-artemis-ra/pom.xml
+++ b/integration-tests/jms-artemis-ra/pom.xml
@@ -66,8 +66,8 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>io.quarkiverse.artemis</groupId>
-            <artifactId>quarkus-test-artemis</artifactId>
+            <groupId>org.apache.camel.quarkus</groupId>
+            <artifactId>camel-quarkus-integration-tests-support-activemq</artifactId>
             <scope>test</scope>
         </dependency>
 
