--- a/integration-tests/minio/src/main/resources/application.properties
+++ b/integration-tests/minio/src/main/resources/application.properties
@@ -15,8 +15,5 @@
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
 
-# Ensure the  same locale en_US is used in native as io.minio.Time
-quarkus.native.user-country=US
-quarkus.native.user-language=en
-
-
+# Ensure the same locale en_US is used in native as io.minio.Time
+quarkus.default-locale=en-US
