Add Smooks JVM only extension

--- a/integration-tests-jvm/pom.xml
+++ b/integration-tests-jvm/pom.xml
@@ -90,6 +90,7 @@
         <module>redis</module>
         <module>robotframework</module>
         <module>schematron</module>
+        <module>smooks</module>
         <module>smpp</module>
         <module>snmp</module>
         <module>spring-redis</module>
