--- a/extensions-jvm/pom.xml
+++ b/extensions-jvm/pom.xml
@@ -91,6 +91,7 @@
         <module>redis</module>
         <module>robotframework</module>
         <module>schematron</module>
+        <module>smooks</module>
         <module>smpp</module>
         <module>snmp</module>
         <module>spring-redis</module>
