--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -101,6 +101,7 @@
         <module>google</module>
         <module>google-bigquery</module>
         <module>google-pubsub</module>
+        <module>google-secret-manager</module>
         <module>google-storage</module>
         <module>graphql</module>
         <module>grok</module>
