fixes #6934: google-pub-sub support

--- a/extensions/google-secret-manager/deployment/pom.xml
+++ b/extensions/google-secret-manager/deployment/pom.xml
@@ -39,8 +39,8 @@
             <artifactId>camel-quarkus-google-secret-manager</artifactId>
         </dependency>
         <dependency>
-            <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-grpc-common-deployment</artifactId>
+            <groupId>org.apache.camel.quarkus</groupId>
+            <artifactId>camel-quarkus-support-google-pubsub-deployment</artifactId>
         </dependency>
     </dependencies>
 
