--- a/extensions-support/google-pubsub/deployment/pom.xml
+++ b/extensions-support/google-pubsub/deployment/pom.xml
@@ -21,42 +21,26 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.apache.camel.quarkus</groupId>
-        <artifactId>camel-quarkus-google-pubsub-parent</artifactId>
+        <artifactId>camel-quarkus-support-google-pubsub-parent</artifactId>
         <version>3.19.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>camel-quarkus-google-pubsub-deployment</artifactId>
-    <name>Camel Quarkus :: Google Pubsub :: Deployment</name>
+    <artifactId>camel-quarkus-support-google-pubsub-deployment</artifactId>
+    <name>Camel Quarkus :: Support :: Google Pubsub :: Deployment</name>
 
     <dependencies>
-        <dependency>
-            <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-jackson-deployment</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-grpc-common-deployment</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-netty-deployment</artifactId>
-        </dependency>
         <dependency>
             <groupId>org.apache.camel.quarkus</groupId>
             <artifactId>camel-quarkus-core-deployment</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.camel.quarkus</groupId>
-            <artifactId>camel-quarkus-support-google-cloud-deployment</artifactId>
+            <artifactId>camel-quarkus-support-google-pubsub</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.apache.camel.quarkus</groupId>
-            <artifactId>camel-quarkus-support-google-pubsub-deployment</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.camel.quarkus</groupId>
-            <artifactId>camel-quarkus-google-pubsub</artifactId>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-grpc-common-deployment</artifactId>
         </dependency>
     </dependencies>
 
