--- a/extensions-support/pom.xml
+++ b/extensions-support/pom.xml
@@ -46,6 +46,7 @@
         <module>dsl</module>
         <module>google-cloud</module>
         <module>google-http-client</module>
+        <module>google-pubsub</module>
         <module>httpclient</module>
         <module>httpclient5</module>
         <module>jackson-dataformat-xml</module>
