Add azure-servicebus native support
Fixes #4642

--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -64,6 +64,7 @@
         <module>aws2-translate</module>
         <module>azure-eventhubs</module>
         <module>azure-key-vault</module>
+        <module>azure-servicebus</module>
         <module>azure-storage-blob</module>
         <module>azure-storage-queue</module>
         <module>base64</module>
