--- a/extensions/azure-servicebus/pom.xml
+++ b/extensions/azure-servicebus/pom.xml
@@ -18,30 +18,20 @@
 
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.apache.camel.quarkus</groupId>
-        <artifactId>camel-quarkus-integration-test-groups</artifactId>
+        <artifactId>camel-quarkus-extensions</artifactId>
         <version>3.19.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>camel-quarkus-integration-tests-azure</artifactId>
+    <artifactId>camel-quarkus-azure-servicebus-parent</artifactId>
+    <name>Camel Quarkus :: Azure ServiceBus</name>
     <packaging>pom</packaging>
 
-    <name>Camel Quarkus :: Azure Integration Tests</name>
-
-    <properties>
-        <quarkus.banner.enabled>false</quarkus.banner.enabled>
-    </properties>
-
     <modules>
-        <!-- extensions a..z; do not remove this comment, it is important when sorting via  mvn process-resources -Pformat -->
-        <module>azure-eventhubs</module>
-        <module>azure-key-vault</module>
-        <module>azure-servicebus</module>
-        <module>azure-storage-blob</module>
-        <module>azure-storage-queue</module>
+        <module>deployment</module>
+        <module>runtime</module>
     </modules>
-
 </project>
