Regen modeline metadata

--- a/docs/modules/ROOT/examples/others/dsl-modeline.yml
+++ b/docs/modules/ROOT/examples/others/dsl-modeline.yml
@@ -4,7 +4,7 @@ cqArtifactId: camel-quarkus-dsl-modeline
 cqArtifactIdBase: dsl-modeline
 cqNativeSupported: false
 cqStatus: Preview
-cqDeprecated: false
+cqDeprecated: true
 cqJvmSince: 2.14.0
 cqNativeSince: n/a
 cqCamelPartName: dsl-modeline
