Test observability-services otel tracing and JMX metrics
Fixes #6968

--- a/integration-tests/observability-services/src/main/resources/application.properties
+++ b/integration-tests/observability-services/src/main/resources/application.properties
@@ -15,10 +15,9 @@
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
 
-#
-# Camel
-#
-camel.context.name = quarkus-camel-example
+camel.context.name=observability-services-context
 
-# Prevent unwanted routes appearing in the health check output
-camel.health.exclude-pattern = disabledHealthRoute
+quarkus.otel.sdk.disabled=false
+quarkus.otel.bsp.export.timeout=1s
+quarkus.otel.bsp.schedule.delay=50
+quarkus.otel.traces.suppress-application-uris=/spans/*,/observability-services/registry
