--- a/integration-tests/micrometer/pom.xml
+++ b/integration-tests/micrometer/pom.xml
@@ -67,10 +67,12 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-resteasy-jsonb</artifactId>
         </dependency>
+        <!-- TODO: https://github.com/apache/camel-quarkus/issues/6984
         <dependency>
             <groupId>io.quarkiverse.micrometer.registry</groupId>
             <artifactId>quarkus-micrometer-registry-jmx</artifactId>
         </dependency>
+        -->
         <!-- test dependencies -->
         <dependency>
             <groupId>io.quarkus</groupId>
