fixed #6979: azure-key-vault better coverage for identity credentials

--- a/integration-test-groups/azure/azure-key-vault/src/main/resources/application.properties
+++ b/integration-test-groups/azure/azure-key-vault/src/main/resources/application.properties
@@ -14,8 +14,8 @@
 ## See the License for the specific language governing permissions and
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
-#
-camel.vault.azure.tenantId = ${AZURE_TENANT_ID:placeholderTenantId}
-camel.vault.azure.clientId = ${AZURE_CLIENT_ID:placeholderClientId}
-camel.vault.azure.clientSecret = ${AZURE_CLIENT_SECRET:placeholderClientSecret}
 camel.vault.azure.vaultName = ${AZURE_VAULT_NAME:cq-vault-testing}
+#following properties are added by the test profile if needed
+#camel.vault.azure.tenantId = ${AZURE_TENANT_ID:placeholderTenantId}
+#camel.vault.azure.clientId = ${AZURE_CLIENT_ID:placeholderClientId}
+#camel.vault.azure.clientSecret = ${AZURE_CLIENT_SECRET:placeholderClientSecret}
