Add Jolokia JVM only extension
Fixes #6942

--- a/extensions-jvm/pom.xml
+++ b/extensions-jvm/pom.xml
@@ -69,6 +69,7 @@
         <module>jcr</module>
         <module>jgroups</module>
         <module>jgroups-raft</module>
+        <module>jolokia</module>
         <module>jooq</module>
         <module>json-patch</module>
         <module>jsonapi</module>
