--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -42,6 +42,7 @@ updates:
       - dependency-name: "com.squareup.okhttp3:okhttp"
       - dependency-name: "io.swagger.codegen.v3:swagger-codegen-generators"
       - dependency-name: "org.amqphub.quarkus:quarkus-qpid-jms-bom"
+      - dependency-name: "org.jolokia:jolokia-agent-jvm"
       # Test dependencies
       - dependency-name: "org.wiremock:wiremock-standalone"
       - dependency-name: "com.unboundid:unboundid-ldapsdk"
