--- a/pom.xml
+++ b/pom.xml
@@ -604,6 +604,9 @@
                                     <exclude>**/*.wasm</exclude>
                                     <exclude>**/known_hosts</exclude>
                                 </excludes>
+                                <includes>
+                                    <include>**/*.md</include>
+                                </includes>
                             </licenseSet>
                         </licenseSets>
                         <mapping>
@@ -616,6 +619,7 @@
                             <Jenkinsfile.quarkus>SLASHSTAR_STYLE</Jenkinsfile.quarkus>
                             <Jenkinsfile.sonarcloud>SLASHSTAR_STYLE</Jenkinsfile.sonarcloud>
                             <jsh>SLASHSTAR_STYLE</jsh>
+                            <md>XML_STYLE</md>
                             <mjs>SLASHSTAR_STYLE</mjs>
                             <properties>CAMEL_PROPERTIES_STYLE</properties>
                             <rnc>SCRIPT_STYLE</rnc>
