Fixes #7004: making azure-key-valt refresh test stable.

--- a/integration-test-groups/azure/azure-key-vault/src/main/resources/application.properties
+++ b/integration-test-groups/azure/azure-key-vault/src/main/resources/application.properties
@@ -15,6 +15,8 @@
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
 camel.vault.azure.vaultName = ${AZURE_VAULT_NAME:cq-vault-testing}
+camel.main.context-reload-enabled = true
+
 #following properties are added by the test profile if needed
 #camel.vault.azure.tenantId = ${AZURE_TENANT_ID:placeholderTenantId}
 #camel.vault.azure.clientId = ${AZURE_CLIENT_ID:placeholderClientId}
